build/log/idf_py_stdout_output_34377
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/evan/Documents/CANSAT-GROUND-STATION/build/bootloader/esp-idf/esptool_py && /home/evan/.espressif/python_env/idf5.5_py3.13_env/bin/python /home/evan/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/evan/Documents/CANSAT-GROUND-STATION/build/bootloader/bootloader.bin
Bootloader binary size 0x66c0 bytes. 0x940 bytes (8%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj 
/home/evan/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20251107/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.5.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/evan/Documents/CANSAT-GROUND-STATION/build/config -I/home/evan/Documents/CANSAT-GROUND-STATION/main -I/home/evan/esp/esp-idf/components/newlib/platform_include -I/home/evan/esp/esp-idf/components/freertos/config/include -I/home/evan/esp/esp-idf/components/freertos/config/include/freertos -I/home/evan/esp/esp-idf/components/freertos/config/xtensa/include -I/home/evan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/evan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/evan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/evan/esp/esp-idf/components/freertos/esp_additions/include -I/home/evan/esp/esp-idf/components/esp_hw_support/include -I/home/evan/esp/esp-idf/components/esp_hw_support/include/soc -I/home/evan/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/evan/esp/esp-idf/components/esp_hw_support/dma/include -I/home/evan/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/evan/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/evan/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/evan/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/evan/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/evan/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/evan/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/evan/esp/esp-idf/components/heap/include -I/home/evan/esp/esp-idf/components/heap/tlsf -I/home/evan/esp/esp-idf/components/log/include -I/home/evan/esp/esp-idf/components/soc/include -I/home/evan/esp/esp-idf/components/soc/esp32 -I/home/evan/esp/esp-idf/components/soc/esp32/include -I/home/evan/esp/esp-idf/components/soc/esp32/register -I/home/evan/esp/esp-idf/components/hal/platform_port/include -I/home/evan/esp/esp-idf/components/hal/esp32/include -I/home/evan/esp/esp-idf/components/hal/include -I/home/evan/esp/esp-idf/components/esp_rom/include -I/home/evan/esp/esp-idf/components/esp_rom/esp32/include -I/home/evan/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/evan/esp/esp-idf/components/esp_rom/esp32 -I/home/evan/esp/esp-idf/components/esp_common/include -I/home/evan/esp/esp-idf/components/esp_system/include -I/home/evan/esp/esp-idf/components/esp_system/port/soc -I/home/evan/esp/esp-idf/components/esp_system/port/include/private -I/home/evan/esp/esp-idf/components/xtensa/esp32/include -I/home/evan/esp/esp-idf/components/xtensa/include -I/home/evan/esp/esp-idf/components/xtensa/deprecated_include -I/home/evan/esp/esp-idf/components/lwip/include -I/home/evan/esp/esp-idf/components/lwip/include/apps -I/home/evan/esp/esp-idf/components/lwip/include/apps/sntp -I/home/evan/esp/esp-idf/components/lwip/lwip/src/include -I/home/evan/esp/esp-idf/components/lwip/port/include -I/home/evan/esp/esp-idf/components/lwip/port/freertos/include -I/home/evan/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/evan/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/evan/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/evan/Documents/CANSAT-GROUND-STATION/components/RadioLib -I/home/evan/Documents/CANSAT-GROUND-STATION/components/RadioLib/src -I/home/evan/esp/esp-idf/components/esp_driver_gpio/include -I/home/evan/esp/esp-idf/components/esp_timer/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/evan/Documents/CANSAT-GROUND-STATION=. -fmacro-prefix-map=/home/evan/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -c /home/evan/Documents/CANSAT-GROUND-STATION/main/main.cpp
/home/evan/Documents/CANSAT-GROUND-STATION/main/main.cpp: In function 'void lora_rx_task(void*)':
/home/evan/Documents/CANSAT-GROUND-STATION/main/main.cpp:54:13: error: 'parse_and_print' was not declared in this scope
   54 |             parse_and_print((char*)rx_buffer);
      |             ^~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
